--- a/index.html
+++ b/index.html
@@ -86,8 +86,9 @@
     </head>
     <body>
         <div id="wrapper">
-            <h1>Nickbing Lao</h1>
+            <h1>HTC</h1>
             <h2>Keep Clam and Carry On</h2>
+            <p><a href="https://www.huangtiancai.cn/" target="_blank">主页</a></p>
             <p><a href="" target="_blank">简历</a></p>
             <p><a href="https://blog.huangtiancai.cn/" target="_blank">Blog</a></p>
             <p><a href="https://github.com/huangtiancai" target="_blank">Github</a></p>
