update home url

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <h1>HTC</h1>
             <h2>Keep Clam and Carry On</h2>
             <p><a href="https://totiancai.com" target="_blank">主页</a></p>
-            <p><a href="" arget="_blank">简历</a></p>
+            <p><a href="https://totiancai.com" arget="_blank">简历</a></p>
             <p><a href="https://blog.totiancai.com" target="_blank">Blog</a></p>
             <p><a href="https://github.com/huangtiancai" target="_blank">Github</a></p>
             <p><a href="https://project.totiancai.com" target="_blank">Project</a></p>
